RESOLVED FIXED 116600
Graphical elements inside mphantom should not be visible
https://bugs.webkit.org/show_bug.cgi?id=116600
Summary Graphical elements inside mphantom should not be visible
Frédéric Wang (:fredw)
Reported 2013-05-22 02:31:50 PDT
See the attached testcase. The square root and fraction bars are visible, while they should be hidden by the mphantom element.
Attachments
testcase (389 bytes, text/html)
2013-05-22 02:32 PDT, Frédéric Wang (:fredw)
no flags
Patch V1 (4.68 KB, patch)
2013-07-24 08:45 PDT, Frédéric Wang (:fredw)
no flags
Frédéric Wang (:fredw)
Comment 1 2013-05-22 02:32:11 PDT
Created attachment 202510 [details] testcase
Frédéric Wang (:fredw)
Comment 2 2013-07-24 08:45:36 PDT
Created attachment 207396 [details] Patch V1
chris fleizach
Comment 3 2013-07-24 09:12:58 PDT
Comment on attachment 207396 [details] Patch V1 good catch
WebKit Commit Bot
Comment 4 2013-07-24 10:11:03 PDT
Comment on attachment 207396 [details] Patch V1 Clearing flags on attachment: 207396 Committed r153088: <http://trac.webkit.org/changeset/153088>
WebKit Commit Bot
Comment 5 2013-07-24 10:11:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.